# HPC_Mandelbrot

mandelbrot/: CMakeLists.txt
mandelbrot/include/: mandelbrotCPU.h  mandelbrotGPU.h  rgb.h
mandelbrot/src/: main.c  mandelbrot.c  mandelbrotCPU.c  mandelbrotCPU2.c  mandelbrotGPU.c  mandelbrotGPU.cu  mandelbrotGPU2.c  mandelbrotGPUWorking.c
